--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,11 @@ body {
     background-color: whitesmoke;
 }
 
+.card {
+    margin-bottom: 1rem;
+    box-shadow: 3px 5px 5px -4px rgba(0, 0, 0, 0.25);
+}
+
 div.flash-info {
     width: 400px;
     padding: 7px;
