--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,10 @@ body {
 
 .container {
     margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
-.post-panel  {
+.card, .post, .author-panel {
     margin-bottom: 1rem;
     background-color: white;
     box-shadow: 3px 5px 5px -4px rgba(0, 0, 0, 0.25);
