--- a/css/styles.css
+++ b/css/styles.css
@@ -2,15 +2,22 @@ body {
     background-color: whitesmoke;
 }
 
+form {
+    margin-bottom: 2rem;
+}
+
+.full_form {
+    border: 1px solid rgba(0,0,0,.125)
+}
+
 .container {
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
 
 .card, .post, .author-panel {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     background-color: white;
-    box-shadow: 3px 5px 5px -4px rgba(0, 0, 0, 0.25);
 }
 
 .card-info-sub {
@@ -34,6 +41,15 @@ body {
     height: 170px;
     width: 180px;
 }
+
+.card_cat {
+    margin-right: 2rem;
+}
+
+.card-text {
+    min-height: 72px;
+}
+
 
 div.flash-info {
     width: 400px;
